--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "mui-image": "^1.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^3.0.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
