--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^3.0.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
@@ -56,6 +57,7 @@
   },
   "devDependencies": {
     "@types/mui-image": "^1.0.1",
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-syntax-highlighter": "^15.5.7"
   }
 }
